--- a/Basketball/SiteSettings.config
+++ b/Basketball/SiteSettings.config
@@ -4,8 +4,8 @@
   <GuestEditModeEnabled>true</GuestEditModeEnabled>
   <DisableScripts>true</DisableScripts>
   <MailFrom>noreply@basketball.ru.com</MailFrom>
-  <SmtpHost>localhost</SmtpHost>
-  <SmtpPort>0</SmtpPort>
-  <SmtpUserName></SmtpUserName>
-  <SmtpPassword></SmtpPassword>
+  <SmtpHost>wpl42.hosting.reg.ru</SmtpHost>
+  <SmtpPort>587</SmtpPort>
+  <SmtpUserName>noreply@basketball.ru.com</SmtpUserName>
+  <SmtpPassword>I7x75oxx</SmtpPassword>
 </SiteSettings>
